tests/error/invalid_cast.gw
#! [contains] no match found for operator
class C {}
class D {}
D d;
d $ C;
